--- a/time_series_hora.ipynb
+++ b/time_series_hora.ipynb
@@ -29,11 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sql_conn = pyodbc.connect('''DRIVER={ODBC Driver 13 for SQL Server};\n",
-    "                            SERVER=srvmsp063;\n",
-    "                            DATABASE=LINX_DW;\n",
-    "                           Trusted_Connection=yes''')\n",
-    "marca=\"LE LIS BLANC DEUX\""
+    "sql_conn = pyodbc.connect('''''')\n",
+    "marca = ""
    ]
   },
   {
@@ -42,84 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = '''WITH\n",
-    "VENDA_HORA_CTE as (\n",
-    "\n",
-    "   SELECT A.DATA_DTTIME, A.HORA, A.MINUTO\n",
-    "      ,VLF = Sum (A.VALOR_VENDA - A.VALOR_TROCA - A.DESCONTO_VENDA - A.DESCONTO_TROCA)\n",
-    "   FROM FatoVendas A\n",
-    "   JOIN DimFiliais B on A.CODIGO_FILIAL = B.CODIGO_FILIAL and B.CANAL = 'REDE'\n",
-    "   JOIN DimProdutos C on A.PRODUTO = C.PRODUTO\n",
-    "   WHERE A.DATA_DTTIME = DATEADD(DAY, 0, Cast(GETDATE() as date))\n",
-    "   and A.DESC_REDE_LOJAS = '{var}'\n",
-    "   GROUP BY A.DATA_DTTIME, A.HORA, A.MINUTO\n",
-    "),\n",
-    "\n",
-    "TBL_HORA_CTE AS (\n",
-    "   SELECT 11 AS HORA, 1 AS ID UNION ALL\n",
-    "   SELECT 12 AS HORA, 1 AS ID UNION ALL\n",
-    "   SELECT 13 AS HORA, 1 AS ID UNION ALL\n",
-    "   SELECT 14 AS HORA, 1 AS ID UNION ALL\n",
-    "   SELECT 15 AS HORA, 1 AS ID UNION ALL\n",
-    "   SELECT 16 AS HORA, 1 AS ID UNION ALL\n",
-    "   SELECT 17 AS HORA, 1 AS ID UNION ALL\n",
-    "   SELECT 18 AS HORA, 1 AS ID UNION ALL\n",
-    "   SELECT 19 AS HORA, 1 AS ID UNION ALL\n",
-    "   SELECT 20 AS HORA, 1 AS ID UNION ALL\n",
-    "   SELECT 21 AS HORA, 1 AS ID UNION ALL\n",
-    "   SELECT 22 AS HORA, 1 AS ID\n",
-    "),\n",
-    "\n",
-    "TBL_MINUTO_CTE AS(\n",
-    "\tSELECT 00 AS MINUTO, 1 AS ID UNION ALL\n",
-    "\tSELECT 15 AS MINUTO, 1 AS ID UNION ALL\n",
-    "\tSELECT 30 AS MINUTO, 1 AS ID UNION ALL\n",
-    "\tSELECT 45 AS MINUTO, 1 AS ID\n",
-    "),\n",
-    "\n",
-    "TBL_DIA_CTE AS (\n",
-    "   SELECT A.DATA_DTTIME, 1 AS ID\n",
-    "   FROM DimCalendario A\n",
-    "   WHERE A.DATA_DTTIME = cast(getdate() as date)\n",
-    "),\n",
-    "\n",
-    "TBL_DIA_HORA_CTE AS (\n",
-    "   SELECT A.DATA_DTTIME\n",
-    "\t\t, B.HORA, 1 AS ID\n",
-    "   FROM TBL_DIA_CTE A\n",
-    "   FULL OUTER JOIN TBL_HORA_CTE B ON A.ID = B.ID\n",
-    "   GROUP BY A.DATA_DTTIME, B.HORA\n",
-    "),\n",
-    "\n",
-    "TBL_DIA_HORA_MINUTO_CTE AS(\n",
-    "\tSELECT A.DATA_DTTIME, A.HORA, B.MINUTO\n",
-    "\tFROM TBL_DIA_HORA_CTE A\n",
-    "\tFULL OUTER JOIN TBL_MINUTO_CTE B ON A.ID = B.ID\n",
-    "\tGROUP BY A.DATA_DTTIME, A.HORA, B.MINUTO\n",
-    "),\n",
-    "\n",
-    "VENDA_CONCATEN as(\n",
-    "\tSELECT  A.DATA_DTTIME\n",
-    "\t\t\t, A.HORA\n",
-    "\t\t\t,A.MINUTO\n",
-    "\t\t\t, B.VLF\n",
-    "\tFROM TBL_DIA_HORA_MINUTO_CTE A\n",
-    "\tLEFT JOIN VENDA_HORA_CTE B on A.DATA_DTTIME=B.DATA_DTTIME AND A.HORA=B.HORA AND A.MINUTO=B.MINUTO\n",
-    "),\n",
-    "\n",
-    "VENDA_HORA_ACC_CTE as (\n",
-    "\tSELECT A.DATA_DTTIME, A.HORA, A.MINUTO\n",
-    "\t\t, VLF_ACC = Sum(A.VLF) over (PARTITION BY A.HORA ORDER BY A.MINUTO)\n",
-    "\tFROM VENDA_CONCATEN A\n",
-    "\tGROUP BY A.DATA_DTTIME, A.HORA, A.VLF, A.MINUTO\n",
-    ")\n",
-    "\n",
-    "SELECT A.DATA_DTTIME\n",
-    "   ,A.HORA\n",
-    "   ,A.MINUTO\n",
-    "   ,ISNULL(A.VLF_ACC,0) as VLF\n",
-    "FROM VENDA_HORA_ACC_CTE A\n",
-    "            '''.format(var=marca)#manipulacao da base de dados"
+    "query = ''''''.format(var=marca)#manipulacao da base de dados"
    ]
   },
   {
@@ -131,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                     VLF\nHORA                    \n2019-02-18 11:00:00  0.0\n2019-02-18 11:15:00  0.0\n2019-02-18 11:30:00  0.0\n2019-02-18 11:45:00  0.0\n2019-02-18 12:00:00  0.0\n2019-02-18 12:15:00  0.0\n2019-02-18 12:30:00  0.0\n2019-02-18 12:45:00  0.0\n2019-02-18 13:00:00  0.0\n2019-02-18 13:15:00  0.0\n2019-02-18 13:30:00  0.0\n                     VLF\nHORA                    \n2019-02-18 11:00:00  0.0\n2019-02-18 11:15:00  0.0\n2019-02-18 11:30:00  0.0\n2019-02-18 11:45:00  0.0\n2019-02-18 12:00:00  0.0\n2019-02-18 12:15:00  0.0\n2019-02-18 12:30:00  0.0\n2019-02-18 12:45:00  0.0\n2019-02-18 13:00:00  0.0\n2019-02-18 13:15:00  0.0\n2019-02-18 13:30:00  0.0\n2019-02-18 13:45:00  0.0\n2019-02-18 14:00:00  0.0\n2019-02-18 14:15:00  0.0\n2019-02-18 14:30:00  0.0\n2019-02-18 14:45:00  0.0\n2019-02-18 15:00:00  0.0\n2019-02-18 15:15:00  0.0\n2019-02-18 15:30:00  0.0\n2019-02-18 15:45:00  0.0\n"
+     " "
      ]
     }
    ],
